<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatisticsActivity"
    android:background="@drawable/background3"
    android:id="@+id/seStatsAct">

    <ImageView
        android:id="@+id/imageStatsTitle"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/statistics"
        android:contentDescription="@string/Statistics_image_Statistics"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.035"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />

    <ImageView
        android:id="@+id/imageBack"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="closeActivity"
        android:src="@drawable/back"
        android:contentDescription="@string/Statistics_image_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.973" />

    <ImageView
        android:id="@+id/imageResetStats"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/reset_stats"
        android:onClick="resetStats"
        android:contentDescription="@string/Statistics_image_reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.982"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.973" />

    <TextView
        android:id="@+id/textScoreboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Statistics_Scoreboard"
        android:textColor="@android:color/white"
        android:textSize="10pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17000002" />

    <TextView
        android:id="@+id/textScoreboard2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Statistics_Overall_stats"
        android:textColor="@android:color/white"
        android:textSize="10pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout3"
        app:layout_constraintHorizontal_bias="0.345"
        app:layout_constraintStart_toStartOf="@+id/tableLayout3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="170dp"
        android:layout_height="220dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true">

        </ScrollView>

        <ListView
            android:id="@+id/listView1"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>
    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.561"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.361">

        <TableRow>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Statistics_General"
                android:textColor="@android:color/white"
                android:textSize="11pt" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="50dp"
                android:text="@string/Statistics_Details"
                android:textColor="@android:color/white"
                android:textSize="11pt" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textPlays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Statistics_games"
                android:textColor="@android:color/white"
                tools:layout_editor_absoluteX="17dp"
                tools:layout_editor_absoluteY="72dp" />

            <TextView
                android:id="@+id/textPlacedShips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="50dp"
                android:text="@string/Statistics_Placed_ships"
                android:textColor="@android:color/white" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textWins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Statistics_wins"
                android:textColor="@android:color/white"
                tools:layout_editor_absoluteX="17dp"
                tools:layout_editor_absoluteY="100dp" />

            <TextView
                android:id="@+id/textPlacedBigShips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="50dp"
                android:text="@string/Statistics_big_ships"
                android:textColor="@android:color/white" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textLoses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Statistics_loses"
                android:textColor="@android:color/white"
                tools:layout_editor_absoluteX="17dp"
                tools:layout_editor_absoluteY="127dp" />

            <TextView
                android:id="@+id/textPlacedMiddleShips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="50dp"
                android:text="@string/Statistics_middle_ship"
                android:textColor="@android:color/white" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textShots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Statistics_shots"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textPlacedSmallShips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="50dp"
                android:text="@string/Statistics_small_ship"
                android:textColor="@android:color/white" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textAIShots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Statistics_ai_shots"
                android:textColor="@android:color/white" />
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>