<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@drawable/background3"
    android:id="@+id/settAct">

    <ImageView
        android:id="@+id/imageSettingsTitle"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/settings"
        android:contentDescription="@string/Settings_image_Settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.035"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />

    <ImageView
        android:id="@+id/imageBack"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="closeActivity"
        android:src="@drawable/back"
        android:contentDescription="@string/Settings_image_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.973" />

    <Button
        android:id="@+id/buttonVyber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Settings_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.264" />

    <HorizontalScrollView
        android:layout_width="0dp"
        android:layout_height="155dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.67">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:contentDescription="@string/Settings_image_back1"
                android:onClick="selectedBackground"
                android:paddingVertical="2.5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:src="@drawable/background" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:contentDescription="@string/Settings_image_back2"
                android:onClick="selectedBackground2"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:src="@drawable/background2" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:contentDescription="@string/Settings_image_back3"
                android:onClick="selectedBackground3"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:src="@drawable/background3" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:contentDescription="@string/Settings_image_back4"
                android:onClick="selectedBackground4"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:src="@drawable/background4" />

        </LinearLayout>
    </HorizontalScrollView>

</android.support.constraint.ConstraintLayout>